<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestService</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="change_text">Change Text</string>
    <string name="hello_world_">Hello world!</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="bind_service">Bind Service</string>
    <string name="unbind_service">Unbind Service</string>
    <string name="start_intentservice">Start IntentService</string>
    <string name="start_timer_service">Start Long Running Service</string>
    <string name="stop_timer_service">Stop Long Running Service</string>
    <string name="timer_service">Timer Service</string>

</resources>
