<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
        android:id="@+id/start_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/start_service" />

    <Button
        android:id="@+id/stop_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/stop_service" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
        android:id="@+id/bind_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/bind_service" />

    <Button
        android:id="@+id/unbind_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/unbind_service" />
           
    </LinearLayout>
    
    <Button
        android:id="@+id/start_intent_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_intentservice" />

    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/timer_service"
        android:gravity="center_horizontal"
        android:textColor="#0f0"
        android:textSize="20sp"
        />
    
    <Button
        android:id="@+id/start_timer_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_timer_service" />

    <Button
        android:id="@+id/stop_timer_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_timer_service" />

</LinearLayout>